--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Testimonials-Grid-Section-Main</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,9 +23,9 @@
 </head>
 <body>
   <div class="container">
-    <section>
+    <section class="denial">
       <div class="person">
-        <img src="" alt="">
+        <img src="./images/image-daniel.jpg" alt="danial">
         <div class="content">
           <h3>Daniel Clifford</h3>
           <h4>Verified Graduate</h4>
@@ -36,9 +43,9 @@
   the course, I've successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
     </section>
-    <section>
+    <section class="jonathan">
       <div class="person">
-        <img src="" alt="">
+        <img src="./images/image-jonathan.jpg" alt="Jonathan">
         <div class="content">
           <h3>Jonathan Walters</h3>
           <h4>Verified Graduate</h4>
@@ -52,9 +59,9 @@
         for a big company. This was one of the best investments I've made in myself. ”
       </p>
     </section>
-    <section>
+    <section class="jeanete">
       <div class="person">
-        <img src="" alt="">
+        <img src="./images/image-jeanette.jpg" alt="jeanete">
         <div class="content">
           <h3>Jeanette Harmon</h3>
           <h4>Verified Graduate</h4>
@@ -68,9 +75,9 @@
   while doing something I love. ”
       </p>
     </section>
-    <section>
+    <section class="patrik">
       <div class="person">
-        <img src="" alt="">
+        <img src="./images/image-patrick.jpg" alt="patrik">
         <div class="content">
           <h3>Patrick Abrams</h3>
           <h4>Verified Graduate</h4>
@@ -88,9 +95,9 @@
         an incredible community of smart and amazing people. ”
       </p>
     </section>
-    <section>
+    <section class="kira">
       <div class="person">
-        <img src="" alt="">
+        <img src="./images/image-kira.jpg" alt="kira">
         <div class="content">
           <h3> Kira Whittle</h3>
           <h4>Verified Graduate</h4>
