Update CSS Main

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </style>
 </head>
 <body>
+  <div class="main">
   <div class="container">
     <section class="denial">
       <div class="person">
@@ -122,7 +123,8 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/yashraj1309"><b>Yashraj Dudhatra</b></a>.
   </div>
+  </div> 
 </body>
 </html>
